Drop Mongoid2 and Ruby 1.8.7 considerations.

--- a/test/dummy/config/mongoid3.yml
+++ b/test/dummy/config/mongoid3.yml
@@ -11,3 +11,7 @@ test:
       database: canard_test
       hosts:
         - localhost:27017
+      options:
+        connect_timeout: 0.01
+        wait_queue_timeout: 0.01
+        socket_timeout: 0.01
